Added a script installer for Nextcloud 10.0.1, a fork of ownCloud.
When using DNSSEC, the DS records that need to be created at your registrar are now displayed on the DNS Options page. If the parent domain is hosted by Virtualmin, the DS records will be added automatically.
The number of top-level virtual servers a reseller is allowed to create can now be limited.
Virtualmin can now generate TLSA DNS records for DANE SSL certificate verification, which (when combined with DNSSEC) provide additional assurance to clients that they are connecting to the correct webserver.
When a Let's Encrypt certificate is automatically renewed, the new cert will be copied to servers like Postfix, Dovecot and Webmin that were using the old version.
Added configuration options to allow domain owners to see overall system statistics, and run validation on their domains.
---- Changes since 5.05 ----
Updated the phpMyAdmin script installer to versions 4.6.5.2, 4.4.15.9 and 4.0.10.18, Roundcube to 1.2.3, MediaWiki to 1.28.0, Mantis to 1.3.4, Typo3 to 6.2.30, Wordpress to 4.7.1, Drupal to 8.2.5 and 7.53, NextCloud to 10.0.3 and 11.0.1, IONcube to 6.0.8, Joomla to 3.6.5, Node.js to 7.4.0, Piwik to 3.0.1, TikiWiki to 16.1 and 12.11, Dolibarr to 3.9.4, Moodle to 3.2, Magento to 2.1.3, SMF to 2.0.13, Ghost to 0.11.4, phpMyAdmin to 4.0.10.19 and 4.6.6, and ownCloud to 9.1.3.
Added support for FPM as a PHP execution mode, on systems that have a system package which runs an FPM pool server.
Resellers and domain owners can be granted the ability to migrate backups from other control panels, like cPanel and Plesk.
Added a button to the Manage SSL Certifcate page and a flag to the modify-web API command to break shared certificate linkage.
Added the start-stop-script API command to manage the servers behind Ruby and Node.JS scripts.